Fixed mobile menu overlapping, skill iconography retina background sizing and added schematic icon retina fallback styles.

--- a/wp-content/themes/tomdallimore/assets/src/sass/_header.scss
+++ b/wp-content/themes/tomdallimore/assets/src/sass/_header.scss
@@ -144,7 +144,8 @@ header {
 		ul {
 			padding:0;
 			margin: 0;
-			width: 246px; //300px
+			width: 300px;
+			text-align: center;
 			margin: 13px auto 0;
 			li {
 				display:inline-block;
